added locking for documents. close #541